--- a/instruction.html
+++ b/instruction.html
@@ -49,6 +49,7 @@
                             <input class="uk-input" type="password" aria-label="Not clickable icon" id="txtpassword">
                         </div>
                         <br>
+                        <span class="uk-text-mute uk-text-small uk-text-danger" id="hint"></span>
                     </div>
                 </form>
 
